# scaler-meta-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture_guide.md  client.py  gemini_client.py  gemma_client.py  hallucination_guard.py  inference.py  log_utils.py  models.py  openenv.yaml  plan.md  planner.md  pyproject.toml  requirements.txt  skills.md  timeout_guard.py
security/: bot_guard.py  headers.py  rate_limit.py  sanitise.py
server/: app.py  environment.py
server/data/: __init__.py  contracts.py
server/graders/: __init__.py  classify_grader.py  rewrite_grader.py  risk_grader.py
server/tasks/: __init__.py  easy_classify.py  hard_rewrite.py  medium_risk.py
task_requirements/: TASK_00_overview.md  TASK_01_environment_setup.md  TASK_02_openenv_spec_implementation.md  TASK_03_tasks_and_graders.md  TASK_04_inference_script.md  TASK_05_docker_and_hf_deployment.md  TASK_06_pre_submission_validation.md
